[tool.poetry]
name = "legistream-site"
version = "2.0"
description = "The easiest way to watch Aussie parliaments live."
authors = ["king-millez <Millez.Dev@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
legistream-backend = { git = "https://github.com/OpenGovAus/legistream-backend.git", branch = "main" }
Django = "^3.2.6"
celery = "^5.1.2"
django-celery-beat = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
